default-resources.yml
resources:
  Resources:
    VPC:
      Type: AWS::EC2::VPC
      Properties:
        CidrBlock: 172.98.0.0/18
        EnableDnsSupport: true
        EnableDnsHostnames: true
        Tags:
        - Key: Name
          Value: fuzzbucket-${opt:stage, 'dev'}-vpc

    PublicSubnet:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        AvailabilityZone: ${aws:region, 'us-east-1'}a
        CidrBlock: 172.98.0.0/18
        MapPublicIpOnLaunch: true
        Tags:
        - Key: Name
          Value: fuzzbucket-${opt:stage, 'dev'}-public

    PublicRouteTable:
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId: !Ref VPC
        Tags:
        - Key: Name
          Value: fuzzbucket-${opt:stage, 'dev'}-public

    PublicRoute:
      Type: AWS::EC2::Route
      DependsOn:
        - GatewayToInternet
      Properties:
        RouteTableId: !Ref PublicRouteTable
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId: !Ref InternetGateway

    PublicSubnetRouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        SubnetId: !Ref PublicSubnet
        RouteTableId: !Ref PublicRouteTable

    InternetGateway:
      Type: AWS::EC2::InternetGateway
      Properties:
        Tags:
        - Key: Name
          Value: fuzzbucket-${opt:stage, 'dev'}-ig

    GatewayToInternet:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
        VpcId: !Ref VPC
        InternetGatewayId: !Ref InternetGateway

    S3Endpoint:
      Type: AWS::EC2::VPCEndpoint
      Properties:
        RouteTableIds:
        - !Ref PublicRouteTable
        ServiceName:
          Fn::Join:
          - '.'
          - - com.amazonaws
            - Ref: AWS::Region
            - s3
        VpcId: !Ref VPC

    FuzzbucketDefaultSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: fuzzbucket default access
        GroupName: fuzzbucket-${opt:stage, 'dev'}-default-sg
        VpcId: !Ref VPC
        SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: allow all outgoing
          FromPort: 0
          IpProtocol: -1
          ToPort: 65535

        SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: allow http incoming
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80

        - CidrIp: 0.0.0.0/0
          Description: allow https incoming
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443

        - CidrIp: 0.0.0.0/0
          Description: allow alt http incoming
          FromPort: 8080
          IpProtocol: tcp
          ToPort: 8080

        - CidrIp: 0.0.0.0/0
          Description: allow alt https incoming
          FromPort: 8443
          IpProtocol: tcp
          ToPort: 8443

        # NOTE: Allowing SSH or VNC directly on a public IP address is generally
        # asking for trouble, which is why it is not allowed by default
        # (anymore). If this behavior is required, a separate "resources" file
        # must be supplied via the `FUZZBUCKET_RESOURCES_{stage}` environment
        # variable to include one or both of these ingress rules
        # (See [./README.md](./README.md#optional-cloudformation-resource-customization)).
        #
        # - CidrIp: 0.0.0.0/0
        #   Description: allow ssh incoming
        #   FromPort: 22
        #   IpProtocol: tcp
        #   ToPort: 22
        #
        # - CidrIp: 0.0.0.0/0
        #   Description: allow vnc network traffic
        #   FromPort: 5900
        #   IpProtocol: tcp
        #   ToPort: 5900

        Tags:
        - Key: Name
          Value: fuzzbucket-${opt:stage, 'dev'}-default-sg

    FuzzbucketConnectSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: fuzzbucket connect access
        GroupName: fuzzbucket-${opt:stage, 'dev'}-connect-sg
        VpcId: !Ref VPC
        SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: allow connect http incoming
          FromPort: 3939
          IpProtocol: tcp
          ToPort: 3939

        - CidrIp: 0.0.0.0/0
          Description: allow connect setup http incoming
          FromPort: 13939
          IpProtocol: tcp
          ToPort: 13939

        Tags:
        - Key: Name
          Value: fuzzbucket-${opt:stage, 'dev'}-connect-sg

    ImageAliasesDynamoDBTable:
      Type: AWS::DynamoDB::Table
      Properties:
        AttributeDefinitions:
        - { AttributeName: alias, AttributeType: S }

        KeySchema:
        - { AttributeName: alias, KeyType: HASH }

        ProvisionedThroughput:
          ReadCapacityUnits: 1
          WriteCapacityUnits: 1

        TableName: fuzzbucket-${opt:stage, 'dev'}-image-aliases

    UsersDynamoDBTable:
      Type: AWS::DynamoDB::Table
      Properties:
        AttributeDefinitions:
        - { AttributeName: user, AttributeType: S }

        KeySchema:
        - { AttributeName: user, KeyType: HASH }

        ProvisionedThroughput:
          ReadCapacityUnits: 1
          WriteCapacityUnits: 1

        TableName: fuzzbucket-${opt:stage, 'dev'}-users
